--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ executors:
           POSTGRES_USER: dbuser
           POSTGRES_PASSWORD: dbpassword
           POSTGRES_DB: postgreDB
-      - image: circleci/postgres:ostgres:9.6.2
+      - image: circleci/postgres:9.6.2-alpine
         environment:
           POSTGRES_USER: dbuser
           POSTGRES_PASSWORD: dbpassword
