--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 setup_command: &setup_command
   command: |
+    chmod +x ${CIRCLE_WORKING_DIRECTORY}/.circleci/is_changed_dir.sh
     echo 'export PATH=$PATH:${CIRCLE_WORKING_DIRECTORY}/.circleci' >> $BASH_ENV
 
 executors:
