working_directoryの~を削除してみる

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ commands:
 
 jobs:
   backend_build:
-    working_directory: ~/backend
+    working_directory: backend
     executor: backend-executor
     steps:
     - checkout
@@ -102,7 +102,7 @@ jobs:
     - store_artifacts:
         path: test-reports
   frontend_build:
-    working_directory: ~/frontend
+    working_directory: frontend
     executor: frontend-executor
     steps:
     - checkout
