--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@ version: 2.1
 
 setup_command: &setup_command
   command: |
-    chmod +x ${CIRCLE_WORKING_DIRECTORY}frontend/.circleci/is_changed_dir.sh
-    echo 'export PATH=$PATH:${CIRCLE_WORKING_DIRECTORY}frontend/.circleci' >> $BASH_ENV
+    chmod -r +x ${CIRCLE_WORKING_DIRECTORY}.circleci
+    echo 'export PATH=$PATH:${CIRCLE_WORKING_DIRECTORY}.circleci' >> $BASH_ENV
 
 executors:
   backend-executor:
@@ -85,6 +85,8 @@ jobs:
     - checkout
     - run:
         <<: *setup_command
+    - run:
+        command: 
     - run:
         name: backend diff
         command: |
