--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 setup_command: &setup_command
   command: |
-    chmod -r +x ${CIRCLE_WORKING_DIRECTORY}.circleci
+    chmod +x ${CIRCLE_WORKING_DIRECTORY}.circleci
     echo 'export PATH=$PATH:${CIRCLE_WORKING_DIRECTORY}.circleci' >> $BASH_ENV
 
 executors:
