working_directoryの指定を削除

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,11 +79,11 @@ commands:
 
 jobs:
   backend_build:
-    working_directory: ~/backend/
+    # working_directory: ~/backend/
     executor: backend-executor
     steps:
-    - checkout:
-        path: ~/
+    - checkout
+        # path: ~/
     - run:
         <<: *setup_command
     - run:
@@ -103,11 +103,11 @@ jobs:
     - store_artifacts:
         path: test-reports
   frontend_build:
-    working_directory: ~/frontend/
+    # working_directory: ~/frontend/
     executor: frontend-executor
     steps:
-    - checkout:
-        path: ~/
+    - checkout
+        # path: ~/
     - run:
         <<: *setup_command
     - run:
