jobsの最初でのworking_directoryの指定をやめる

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ commands:
     steps:
       - save_cache:
           name: Save python package
-          key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-{{ .Branch }}-{{ checksum "~/backend/requirements.txt" }}
           paths:
             - /usr/local/bin
             - /usr/local/lib/python3.9/site-packages
@@ -42,48 +42,47 @@ commands:
       - restore_cache:
           name: Restore Python package
           keys: 
-            - deps-back-{{ .Branch }}-{{ checksum "requirements.txt" }}
+            - deps-back-{{ .Branch }}-{{ checksum "~/backend/requirements.txt" }}
             - deps-back-
   pip_install:
     description: "pip install を実行"
     steps:
       - run:
           name: pip install
-          command: pip3 install -r requirements.txt
+          command: pip3 install -r ~/backend/requirements.txt
   save_node_modules:
     description: "node_modules をキャッシュ"
     steps:
       - save_cache:
           name: Save node_modules
-          key: deps-{{ .Branch }}-{{ checksum "yarn.lock "}}
+          key: deps-{{ .Branch }}-{{ checksum "~/frontend/yarn.lock "}}
           paths:
-            - node_modules
+            - ~/frontend/node_modules
   restore_node_modules:
     description: "node_modules を読み込む"
     steps:
       - restore_cache:
           name: Restore node_modules
           keys:
-            - deps-front-{{ .Branch }}-{{ checksum "yarn.lock "}}
+            - deps-front-{{ .Branch }}-{{ checksum "~/frontend/yarn.lock "}}
             - deps-front-
   yarn_install:
     description: "yarn install を実行"
     steps:
       - run:
+          working_directory: ~/frontend
           name: yarn install
           command: npm install -g yarn
       - run:
+          working_directory: ~/frontend
           name: node_modules install
           command: yarn
 
 jobs:
   backend_build:
-    working_directory: ~/src/backend
     executor: backend-executor
     steps:
-    - run: mkdir -p ~/src
-    - checkout:
-        path: ~/src
+    - checkout
 #    - run:
 #        <<: *setup_command
 #    - run:
@@ -97,18 +96,15 @@ jobs:
     - restore_python_package
     - pip_install
     - save_python_package
-    - run: python manage.py test
+    - run: python ~/backend/manage.py test
     - store_test_results:
         path: test-results
     - store_artifacts:
         path: test-reports
   frontend_build:
-    working_directory: ~/src/frontend
     executor: frontend-executor
     steps:
-    - run: mkdir -p ~/src
-    - checkout:
-        path: ~/src
+    - checkout
 #    - run:
 #        <<: *setup_command
 #    - run:
@@ -120,7 +116,9 @@ jobs:
     - restore_node_modules
     - yarn_install
     - save_node_modules
-    - run: yarn test
+    - run: 
+        working_directory: ~/frontend
+        command: yarn test
     - store_test_results:
         path: test-results
     - store_artifacts:
