--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.1
 
-#setup_command: &setup_command
-#  command: |
-#    echo 'export PATH=$PATH:${CIRCLE_WORKING_DIRECTORY}.circleci' >> $BASH_ENV
-  
+setup_command: &setup_command
+command: |
+    echo 'export PATH=$PATH:${CIRCLE_WORKING_DIRECTORY}.circleci' >> $BASH_ENV
+
 executors:
   backend-executor:
     docker:
@@ -79,20 +79,22 @@ jobs:
     executor: backend-executor
     steps:
     - checkout
-#    - run:
-#        <<: *setup_command
-#    - run:
-#        name: backend diff
-#        command: |
-#          if ! is_changed_dir "~/backend/"; then
-#            circleci step halt
-#          fi
+    - run:
+        <<: *setup_command
+    - run:
+        name: backend diff
+        command: |
+          if ! is_changed_dir "backend/"; then
+            circleci step halt
+          fi
     - run: sudo chown -R circleci:circleci /usr/local/bin
     - run: sudo chown -R circleci:circleci /usr/local/lib/python3.9/site-packages
     - restore_python_package
     - pip_install
     - save_python_package
-    - run: python backend/manage.py test
+    - run: 
+        working_directory: backend
+        command: python manage.py test
     - store_test_results:
         path: test-results
     - store_artifacts:
@@ -101,14 +103,14 @@ jobs:
     executor: frontend-executor
     steps:
     - checkout
-#    - run:
-#        <<: *setup_command
-#    - run:
-#        name: frontend diff
-#        command: |
-#          if ! is_changed_dir "~/frontend/"; then
-#            circleci step halt
-#          fi
+    - run:
+        <<: *setup_command
+    - run:
+        name: frontend diff
+        command: |
+          if ! is_changed_dir "frontend/"; then
+            circleci step halt
+          fi
     - run: sudo chown -R circleci:circleci /usr/local/lib/node_modules
     - restore_node_modules
     - yarn_install
