--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint":"npm run lint:es && npm run lint:style",
-    "lint:fix":"npm run lint:es:fix && npm run lint:style:fix",
-    "lint:es":"eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:es:fix":"eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:style":"stylelint 'src/**/*.css'",
-    "lint:style:fix":"stylelint --fix 'src/**/*.css'",
+    "lint": "npm run lint:es && npm run lint:style",
+    "lint:fix": "npm run lint:es:fix && npm run lint:style:fix",
+    "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:style": "stylelint 'src/**/*.css'",
+    "lint:style:fix": "stylelint --fix 'src/**/*.css'",
     "lint:conflict": "npx eslint --print-config .eslintrc.js | npx eslint-config-prettier-check",
     "postinstall": "npx typesync"
   },
@@ -59,13 +59,29 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "stylelint": "^13.7.2",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0"
+  },
+  "husky":{
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged":{
+    "src/**/*.{js,jsx,ts,tsx}": [ 
+      "eslint --fix"
+    ], 
+    "src/**/*.css": [
+      "stylelint --fix"
+    ]
   }
 }
