postgresqlのバージョンを12.1に統一

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         container_name: 'frontend'
         command: sleep infinity
     db:
-        image: postgres
+        image: postgres:12.1-alpine
         ports: 
             - "5432:5432"
         hostname: db
